fix logo width on mobile

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a.github-link i {
 /* Media Queries for Responsiveness */
 @media screen and (max-width: 600px) {
     .logo {
-        max-width: 35px;
+        max-width: 130px;
     }
     
     h1.company-name {
